# LineHarp

./: .gitignore  README.md  vcpkg.json
dat/: horizontal-line.csv  plain_weave_reduced.csv  semiCircle.csv  sim_reduced2.csv  test2.csv
dat/NewDatasets/: Iris.data2.csv  LH-1C.4-150N.csv  LH-1C.4-gt-out.csv  LH-1C.4-gt.csv  LH-1C.5-150N.csv  LH-2C.5-150N.csv  LH-3C.6-gt-out.csv  LH-3C.6-gt.csv  LH-4C.6-150N.csv  LH-4C.6-gt.csv
dat/NewDatasets/Importance/: Iris.data2-imp.csv  LH-1C.4-150N-importance.csv  LH-1C.4-gt-importance-out.csv  LH-1C.4-gt-importance.csv  LH-1C.5-150N-importance.csv  LH-2C.5-150N-importance.csv  LH-3C.6-gt-importance-out.csv  LH-3C.6-gt-importance.csv  (+2 more)
dat/importance/: semiCircleImp.csv
dat/series/: Iris.data.csv
res/line/: blend-fs.glsl  globals.glsl  lens.glsl  line-fs.glsl  line-gs.glsl  line-tcs.glsl  line-tes.glsl
res/sphere/: globals.glsl  line-fs.glsl  line-gs.glsl  line-tcs.glsl  line-tes.glsl
src/: BoundingBoxRenderer.cpp  BoundingBoxRenderer.h  CMakeLists.txt  CameraInteractor.cpp  CameraInteractor.h  LineRenderer.cpp  LineRenderer.h  Renderer.cpp  Renderer.h  UiRenderer.cpp  UiRenderer.h  Viewer.cpp  Viewer.h  main.cpp
src/Audio/: AudioApp.h  AudioPLayer.cpp  AudioPlayer.h  FreqMap.h  Note.cpp  Note.h  NoteBuffer.cpp  NoteBuffer.h  NoteMap.cpp  NoteMap.h  PluckedString.h
src/CSV/: TableData.cpp
src/RenderingStrategies/: LinkedListRendering.cpp  LinkedListRendering.h  RenderingStrategy.cpp  RenderingStrategy.h
src/SimilarityTables/: ImportanceTable.cpp  ImportanceTable.h  SimTable.cpp  SimTable.h
